# 2022-3e-benes-breburda-suchy-ding

./: README.md  deploy-prep.sh  package-lock.json  package.json
back/: .gitignore  Cargo.toml  config.toml.sample  run-speech-checks.sh  todo
back/sql/: init.sql  update-db  update01.sql  update02.sql  update03.sql  update04.sql  updateXX.sql
back/src/: config.rs  fileman.rs  mail.rs  main.rs  security.rs  state.rs  utils.rs  worker.rs
back/src/models/: client_error.rs  mod.rs
back/src/routers/: mod.rs  posts.rs  sessions.rs  users.rs
docs/: literature.bib  main.tex  titulnistrany.tex
docs/sections/: backend.tex  frontend.tex  uvod.tex  zaver.tex
front/: README.md  package-lock.json  package.json
front/src/: App.vue  HomePage.vue  LogInPage.vue  NewPostPage.vue  NotificationsPage.vue  PostPage.vue  ProfilePage.vue  ProfileSetUp.vue  RegisterPage.vue  SavedPostsPage.vue  SettingsPage.vue  SetupPage.vue  main.js  notify.js  queue.js  rest.js  router.js  store.js
front/src/assets/: fonts.css
front/src/components/: AudioPlayer.vue  CommentVue.vue  FeedVue.vue  PostVue.vue  ProfilePic.vue  SetUp.vue  SideBar.vue
