[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = { version = "0.16.0", features = [] }
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "postgres", "uuid", "offline" ] }
ring = { version = "0.16.20", features = ["std"] }
anyhow = "1.0.70"
base64 = "0.21.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
toml = "0.7.3"
validator = { version = "0.15", features = ["derive"] }
lettre = { version = "0.10.4", default-features = false, features = ["async-std1-rustls-tls", "builder", "hostname", "smtp-transport"] }

[package.metadata.cross.build]
default-target = "x86_64-unknown-linux-gnu"
# sqlx does not have access to the DB inside the container
env = { passthrough = ["SQLX_OFFLINE=true"] }
